<resources>
    <string name="app_name">To-Do List</string>
    <string name="app_name_long">Privacy Friendly To-Do List</string>
    <string name="initial_alert">CLICK + FOR NEW LIST</string>
    <string name="second_alert">ADD NEW TASK &gt;</string>
    <string name="nav_header_app_name">To-Do</string>
    <string name="toolbar_title_main">To-Do</string>
    <string name="todos">To-Do\'s</string>
    <string name="tasks">Tasks</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="remove_all_done_tasks">Remove all done tasks</string>
    <string name="calendar_view">Calendar</string>
    <string name="settings">Settings</string>
    <string name="share_all_tasks">Share data</string>
    <string name="export_all_tasks">Export data</string>
    <string name="import_tasks">Import data</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="menu_about">About</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="name">Name</string>
    <string name="description_hint">Description</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="system_default">System default</string>
    <string name="select_option">Select option</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help_overview_heading">General Information</string>
    <string name="help_intro">The Privacy Friendly To-Do List can be used to keep outstanding tasks in mind and organize a personal schedule.</string>
    <string name="help_group_lists">Task management</string>
    <string name="help_todo_lists_title">To-Do lists</string>
    <string name="help_todo_lists">A To-Do list is a group of tasks and can be created using the + button in the toolbar. The lists appear in the navigation menu and can be called there. Tasks inside a To-Do list can be checked, edited and deleted.</string>
    <string name="help_subtasks_title">Subtasks</string>
    <string name="help_subtasks">Subtasks can be attached to a task to represent smaller steps to accomplish it. They can be created by tapping on a task when viewing a single list.</string>
    <string name="help_deadline_reminder_title">Deadlines and reminders</string>
    <string name="help_deadline_reminder">Deadlines and reminders can only be created for tasks. You can either specify them while creating a task, or while editing it.</string>
    <string name="help_recurring_tasks">For regularly recurring tasks, you can set up a recurrence pattern. If a reminder has also been set, it will recur according to the selected recurrence pattern. Once the task has been checked off, the check mark will be automatically removed after the next due date.</string>
    <string name="help_group_app">Settings</string>
    <string name="help_pin_title">Settings</string>
    <string name="help_pin">Open the settings menu to setup a PIN protection for your application. The PIN must be a number with at least 4 digits. You are asked for it every time you start the application.</string>
    <string name="help_sound">Moreover you can choose if a notification sound should be played by receiving a notification.</string>
    <string name="help_group_privacy">Privacy Info</string>
    <string name="help_privacy">This app contains no tracking or advertising. No permissions other than those listed below are used.</string>
    <string name="help_permission_receive_boot_completed">RECEIVE_BOOT_COMPLETED: This permission allows the app to check right after booting of the device if the user wants to get informed about an upcoming deadline.</string>
    <string name="help_permission_post_notifications">POST_NOTIFICATIONS: This permission allows the app to show reminders for approaching tasks.</string>
    <string name="help_permission_schedule_exact_alarm">SCHEDULE_EXACT_ALARM: This permission allows the app to show reminders with exact timing.</string>
    <string name="help_group_data_backup">Data Backup</string>
    <string name="help_data_backup">You can use the separate Privacy Friendly Backup app to backup and restore this application\'s data and settings. This can also be used to transfer your data to another device.</string>
    <string name="help_group_export_import">Data Export / Import</string>
    <string name="help_export">The data of this application can be exported in CSV format (comma separated values, encoding UTF-8) for further processing in other applications.</string>
    <string name="help_import">The data of this application can be imported from a file in CSV format. The format of this file corresponds to the format of the CSV export file.</string>
    <string name="help_group_widget">Widget</string>
    <string name="help_widget">In addition, this app provides a widget that you can add to your home screen. The widget presents you tasks that belong to a chosen list. Clicking on a task leads you to the main view of the app.</string>
    <string name="about_privacy_heading">Privacy Friendly Apps</string>
    <string name="about_secuso">SECUSO - Security, Usability, Society</string>
    <string name="about">About</string>
    <string name="version_number">Version %1$s</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names" translatable="false">Sebastian\u00A0Lutz, Dominik\u00A0Püllen, Simon\u00A0Breitfelder, Christian\u00A0Adams</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Source code licensed under GPLv3 license. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-todo-list">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="done">done</string>
    <string name="no_todo_lists_available">No To-Do lists available.</string>
    <string name="next_deadline_dd">Next Deadline: %1$s</string>
    <string name="no_next_deadline">No upcoming deadline</string>
    <string name="add_list_feedback">%1$s added</string>
    <string name="edit_todo_list">Edit To-Do list</string>
    <string name="move_up_list">Move up list</string>
    <string name="move_down_list">Move down list</string>
    <string name="edit_list">Edit list</string>
    <string name="duplicate_list">Duplicate list</string>
    <string name="export_list">Export list</string>
    <string name="share_list">Share list</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_list_feedback">%1$s deleted</string>
    <string name="new_todo_list">New To-Do list</string>
    <string name="duplicate_todo_list">Duplicate To-Do list</string>
    <string name="list_name_must_not_be_empty">Please enter a list name.</string>
    <string name="show_description">Show description</string>
    <string name="no_description_available">No description available.</string>
    <string name="reset_tasks">Reset (sub-)tasks</string>
    <string name="duplicate_subtasks_too">Duplicate subtasks too</string>
    <string name="empty_todo_list">No tasks available</string>
    <string name="all_tasks">All tasks</string>
    <string name="all_tasks_not_in_list">Tasks that are not assigned to a list</string>
    <string name="open_tasks">Open tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="group_by_priority">Group by priority</string>
    <string name="sort_by_deadline">Sort by deadline</string>
    <string name="sort_by_name_asc">Sort by name</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="new_todo_task">New To-Do task</string>
    <string name="edit_todo_task">Edit To-Do task</string>
    <string name="deadline_dd">Deadline:</string>
    <string name="no_deadline">No Deadline</string>
    <string name="edit_task">Edit task</string>
    <string name="share_task">Share task</string>
    <string name="remove_task">Remove task</string>
    <string name="task_removed">Task successfully removed.</string>
    <string name="tasks_removed">%1$d task(s) and %2$d subtask(s) removed.</string>
    <string name="deadline">Deadline</string>
    <string name="recurrence_every">Recurrence every</string>
    <string name="recurrence_interval_hint">1..n</string>
    <string name="recurrence_pattern_hint">Recurrence pattern</string>
    <string name="select_recurrence_pattern">Select a recurrence pattern:</string>
    <string name="reminder">Reminder</string>
    <string name="deadline_smaller_reminder">The deadline cannot be earlier than the reminder time.</string>
    <string name="reminder_smaller_now">Only recurring tasks can have reminder time in the past.</string>
    <string name="set_deadline_before_reminder">Please specify a deadline before setting the reminder time.</string>
    <string name="set_deadline_if_recurring">A recurring task needs a deadline.</string>
    <string name="recurrence_interval_invalid">Recurrence interval is no integer &gt;= 1.</string>
    <string name="progress_colon">Progress:</string>
    <string name="priority_colon">Priority:</string>
    <string name="zero_percent" formatted="false">0 %</string>
    <string name="select_priority">Select a priority:</string>
    <string name="select_list">Select a list:</string>
    <string name="select_no_list">No list</string>
    <string name="new_todo_subtask">New subtask</string>
    <string name="todo_name_must_not_be_empty">Please enter a task name.</string>
    <string name="edit_subtask">Edit subtask</string>
    <string name="delete_subtask">Delete subtask</string>
    <string name="subtask_removed">Subtask successfully removed.</string>
    <string name="to_choose_list">Select a list!</string>
    <string name="click_to_choose">Click to select!</string>
    <string name="list_colon">List:</string>
    <string name="work_subtask">Work on this subtask</string>
    <string name="work_task">Work on this task</string>
    <string name="move_up">Move up</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="reset_application_button">Reset application</string>
    <string name="add_pin">Add a numeric PIN to provide access to enter the app. The PIN must contain at least 4 digits.</string>
    <string name="default_reminder_time">Default reminder time</string>
    <string name="snooze_duration">Snooze duration of reminders</string>
    <string name="pin_enabled">PIN required on startup</string>
    <string name="set_pin">Set PIN</string>
    <string name="expand_tasks_with_subtasks">Expand tasks that have subtasks</string>
    <string name="auto_progress">Progress by subtasks</string>
    <string name="notify">Enable notification sound</string>
    <string name="pref_app_theme_title">Theme</string>
    <string name="pref_app_theme_default" translatable="false">SYSTEM</string>
    <string name="pref_first_day_of_week_title">First day of week</string>
    <string name="monday_abbr">Mon</string>
    <string name="tuesday_abbr">Tue</string>
    <string name="wednesday_abbr">Wed</string>
    <string name="thursday_abbr">Thu</string>
    <string name="friday_abbr">Fri</string>
    <string name="saturday_abbr">Sat</string>
    <string name="sunday_abbr">Sun</string>
    <string name="bin">Recycle bin</string>
    <string name="widget_configuration">Widget configuration</string>
</resources>