<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/help_intro"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_group_lists">
        <Preference android:title="@string/help_todo_lists_title"
            android:summary="@string/help_todo_lists"
            android:selectable="false"/>
        <Preference android:title="@string/help_subtasks_title"
            android:summary="@string/help_subtasks"
            android:selectable="false"/>
        <Preference android:title="@string/help_deadline_reminder_title"
            android:summary="@string/help_deadline_reminder"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_group_app">
    <Preference android:title="@string/help_pin_title"
        android:summary="@string/help_pin"
        android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_group_privacy">
        <Preference
            android:summary="@string/help_permissions"
            android:title="@string/help_permissions_title" />
    </PreferenceCategory>

</PreferenceScreen>