<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_default_reminder_time"
        android:defaultValue="86400"
        android:entries="@array/default_reminder_times_human"
        android:entryValues="@array/default_reminder_times"
        android:summary="%s"
        android:title="@string/default_reminder_time" />

    <ListPreference
        android:key="pref_snooze_duration"
        android:defaultValue="900"
        android:entries="@array/snooze_duration_values_human"
        android:entryValues="@array/snooze_duration_values"
        android:summary="%s"
        android:title="@string/snooze_duration" />

    <SwitchPreference
        android:key="notify"
        android:defaultValue="true"
        android:title="@string/notify" />

    <SwitchPreference
        android:key="pref_pin_enabled"
        android:defaultValue="false"
        android:title="@string/pin_enabled" />

    <EditTextPreference
        android:key="pref_pin"
        android:defaultValue=""
        android:dependency="pref_pin_enabled"
        android:dialogMessage="@string/add_pin"
        android:dialogTitle="@string/set_pin"
        android:inputType="numberPassword"
        android:maxLength="32"
        android:title="@string/set_pin" />

    <SwitchPreference
        android:key="pref_expand_tasks_with_subtasks"
        android:defaultValue="false"
        android:title="@string/expand_tasks_with_subtasks" />

    <SwitchPreference
        android:key="pref_progress"
        android:defaultValue="false"
        android:title="@string/auto_progress" />

    <ListPreference
        android:key="pref_first_day_of_week"
        android:defaultValue="0"
        android:entries="@array/pref_first_day_of_week_entries"
        android:entryValues="@array/first_day_of_week_values"
        android:summary="%s"
        android:title="@string/pref_first_day_of_week_title" />

    <ListPreference
        android:key="pref_app_theme"
        android:defaultValue="@string/pref_app_theme_default"
        android:entries="@array/pref_app_theme_entries"
        android:entryValues="@array/pref_app_theme_values"
        android:summary="%s"
        android:title="@string/pref_app_theme_title" />

</PreferenceScreen>