<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/widget_cfg_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/widget_configuration"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tv_widget_cfg_list_choose_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/list_colon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_widget_cfg_list_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_widget_cfg_list_choose_str"
            android:layout_alignBottom="@+id/tv_widget_cfg_list_choose_str"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@+id/tv_widget_cfg_list_choose_str"
            android:text="@string/click_to_choose"
            android:textSize="16sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_widget_cfg_all_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/all_tasks"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_widget_cfg_open_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/open_tasks"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_widget_cfg_completed_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/completed_tasks"
                android:textSize="16sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_widget_cfg_group_by_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/group_by_priority"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/cb_widget_cfg_sort_by_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/sort_by_deadline"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_widget_cfg_sort_by_name_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/sort_by_name_asc"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/bt_widget_cfg_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppButtonBarButtonStyle"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/bt_widget_cfg_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppButtonBarButtonStyle"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
