<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/task_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_drawer"
            app:title="@string/app_name_long"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_pin_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/enter_pin"
        android:inputType="numberPassword"
        android:maxLength="32" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/bt_pin_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppButtonBarButtonStyle"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/bt_pin_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppButtonBarButtonStyle"
            android:text="@string/ok" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_reset_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        style="@style/AppButtonBarButtonStyle"
        android:text="@string/reset_application_button" />

</LinearLayout>