<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme.AppBarOverlay"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_calendar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">#

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_prev_month"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_left"/>

            <TextView
                android:id="@+id/tv_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_prev_month"
                android:layout_toLeftOf="@+id/iv_next_month"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="Juli 2016"/>

            <ImageView
                android:id="@+id/iv_next_month"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/arrow_right"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_day_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/sunday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/monday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/tuesday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/wednesday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/thursday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/friday_abbr"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/saturday_abbr"/>

        </LinearLayout>

        <GridView
            android:id="@+id/gv_calendargrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:verticalSpacing="15dp"
            android:numColumns="7"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>